--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,6 @@
 <resources>
-    <string name="app_name">My Application</string>
-    <string name="title_activity_vue2">ActivityVue2</string>
-    <string name="title_vue1">Vue 1</string>
-    <string name="title_vue2">Vue 2</string>
-    <string name="title_vue3">Vue 3</string>
+    <string name="app_name">Drone Project</string>
+    <string name="title_vue1">Tracing</string>
+    <string name="title_vue2">Waypoints</string>
+    <string name="title_vue3">Control</string>
 </resources>
