--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="title_vue1">Tracing</string>
     <string name="title_vue2">Waypoints</string>
     <string name="title_vue3">Control</string>
+    <string name="dialog_question">Delete waypoint ?</string>
+    <string name="dialog_delete">Delete</string>
+    <string name="dialog_cancel">Cancel</string>
 </resources>
