Ajout du SplashScreen
- Ajoute SplashScreenActivity (permet d'avoir un splashscreen à la place d'une page blanche pendant le stratup time, permet aussi de lancer ce que l'on veut avant la main activity)
- Modif mineures (delete fichiers inutiles, changement dans R.strings)

--- a/app/src/main/res/values-fr-rFR/strings.xml
+++ b/app/src/main/res/values-fr-rFR/strings.xml
@@ -2,7 +2,7 @@
 <resources>
     <string name="app_name">Projet Drone</string>
     <string name="title_tracking">Suivi</string>
-    <string name="title_control">Contrôle</string>
+    <string name="title_control">Pilotage</string>
     <string name="title_waypoints">Waypoints</string>
     <string name="dialog_question">Supprimer le waypoint ?</string>
     <string name="dialog_delete">Supprimer</string>
